[gd_scene load_steps=24 format=2]

[ext_resource path="res://3MBoh.gd" type="Script" id=1]
[ext_resource path="res://Chemicals/3-methyl-1-butanol.png" type="Texture" id=2]
[ext_resource path="res://ReactionsButtons/DeHButton.png" type="Texture" id=3]
[ext_resource path="res://ReactionsButtons/DeH_Pressed.png" type="Texture" id=4]
[ext_resource path="res://ReactionsButtons/DeH_Hover.png" type="Texture" id=5]
[ext_resource path="res://ReactionsButtons/SOCl2Button.png" type="Texture" id=6]
[ext_resource path="res://ReactionsButtons/SOCl2_Pressed.png" type="Texture" id=7]
[ext_resource path="res://ReactionsButtons/SOCl2_Hover.png" type="Texture" id=8]
[ext_resource path="res://ReactionsButtons/PBr3Button.png" type="Texture" id=9]
[ext_resource path="res://ReactionsButtons/PBr3_Pressed.png" type="Texture" id=10]
[ext_resource path="res://ReactionsButtons/PBr3_Hover.png" type="Texture" id=11]
[ext_resource path="res://ReactionsButtons/HydrogenHalideButton.png" type="Texture" id=12]
[ext_resource path="res://ReactionsButtons/HydrogenHalide_Pressed.png" type="Texture" id=13]
[ext_resource path="res://ReactionsButtons/HydrogenHalide_Hover.png" type="Texture" id=14]
[ext_resource path="res://3MBoh-3MB-DeH/1-01.png" type="Texture" id=15]
[ext_resource path="res://3MBoh-3MB-DeH/2-01.png" type="Texture" id=16]
[ext_resource path="res://3MBoh-3MB-DeH/3-01.png" type="Texture" id=17]
[ext_resource path="res://3MBoh-3MB-DeH/4-01.png" type="Texture" id=18]
[ext_resource path="res://3MBoh-3MB-DeH/5-01.png" type="Texture" id=19]
[ext_resource path="res://3MBoh-3MB-DeH/6-01.png" type="Texture" id=20]
[ext_resource path="res://3MBoh-3MB-DeH/7-01.png" type="Texture" id=21]
[ext_resource path="res://3MBoh-3MB-DeH/8.png" type="Texture" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": false,
"name": "3MBoh-3MB-DeH",
"speed": 1.5
} ]

[node name="3MBoh" type="TextureRect"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="3MBoh" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Dehydration" type="TextureButton" parent="."]
margin_left = 40.75
margin_top = 540.0
margin_right = 221.75
margin_bottom = 627.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="SOCl2" type="TextureButton" parent="."]
margin_left = 253.25
margin_top = 540.0
margin_right = 434.25
margin_bottom = 632.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="PBr3" type="TextureButton" parent="."]
margin_left = 465.75
margin_top = 540.0
margin_right = 646.75
margin_bottom = 632.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="HydrogenHalide" type="TextureButton" parent="."]
margin_left = 678.25
margin_top = 540.0
margin_right = 859.25
margin_bottom = 629.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="3MBoh-3MB-DeH" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
animation = "3MBoh-3MB-DeH"
centered = false

[connection signal="pressed" from="Dehydration" to="." method="_on_Dehydration_pressed"]
